ku-jen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: k8s-jenkins-ingress
   namespace: devops-tools
spec:
  rules:
  - host: minikube.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jenkins-service
            port:
              name: jenkinssvc
